# srtb

./: .env  .env.dev  .gitignore  README.md
openrtb-server/: README.md  pyproject.toml
openrtb-server/src/openrtb_server/: main.py
openrtb_server/: pyproject.toml
openrtb_server/src/openrtb_server/: main.py
openrtb_server/src/openrtb_server/endpoints/: bid.py  system.py  track.py
openrtb_server/src/openrtb_server/models/: openrtb2.py  openrtb3.py
openrtb_server/src/openrtb_server/utils/: campaign_loader.py  campaigns_cache.py  log_rotation.py
rtb_admin_api/: alembic.ini  docker-compose.yml  pyproject.toml
rtb_admin_api/alembic/: env.py
rtb_admin_api/app/: auth.py  fake_store.py  main.py
rtb_admin_api/app/api/: auth.py  campaigns.py
shared/: config.py  s3_upload.py
shared/db/: init_db.py  session.py
shared/models/: campaign.py
shared/schemas/: __init__.py  campaign.py
terraform/db/: main.tf  setup.sql
terraform/openrtb_server/: github_deploy  github_deploy.pub  main.tf  outputs.tf  user_data.sh  variables.tf
terraform/rtb_admin_api/: github_deploy.pub  main.tf  outputs.tf  user_data.sh  variables.tf
terraform/s3/: main.tf  outputs.tf  variables.tf
web_ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
web_ui/src/: App.js  App.tsx  api.ts  index.css
web_ui/src/components/: CampaignCard.tsx  CampaignDetails.tsx  CampaignList.tsx  EditCampaignForm.tsx  LoginPage.js  LoginPage.tsx
web_ui/src/lib/: utils.ts
(+1 files in other folders)
