[project]
name = "rtb-admin-api"
version = "0.1.0"
description = ""
authors = [
    {name = "shurikm",email = "shurik.mermelshtein@amdocs.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "boto3",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]

[tool.poetry.dependencies]
shared = { path = "../shared", develop = true }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
